test/Fail/Issue4288.agda
a = b module M where private
